force-app/main/default/objects/HR_Contract__c/HR_Contract__c.object-meta.xml
<CustomObject>
    <description>Object to house all contractual documentation with the sales channel.</description>
    <label>HR Contract</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>HR Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>