force-app/main/default/objects/HR_Contract__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>Sales Contact Lookup</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Sales_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>