force-app/main/default/objects/HR_Contract__c/fields/Contract_Expired__c.field-meta.xml
<CustomField>
    <fullName>Contract_Expired__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expired?</label>
    <length>20</length>
    <type>Text</type>
</CustomField>