force-app/main/default/objects/HR_Contract__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-Compete</fullName>
                <default>true</default>
                <label>Non-Compete</label>
            </value>
            <value>
                <fullName>Non-Compete Verbal</fullName>
            </value>
            <value>
                <fullName>Asset Waiver</fullName>
            </value>
            <value>
                <fullName>Confidentiality</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ZB Non-Compete</fullName>
            </value>
            <value>
                <fullName>ZB 1099 Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>