force-app/main/default/objects/HR_Contract__c/fields/Duration_Date__c.field-meta.xml
<CustomField>
    <fullName>Duration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>