force-app/main/default/objects/HR_Contract__c/fields/Duration_Months__c.field-meta.xml
<CustomField>
    <fullName>Duration_Months__c</fullName>
    <description>Number of months after termination</description>
    <inlineHelpText>Number of months after termination contract expires</inlineHelpText>
    <label>Duration (Months)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>