force-app/main/default/objects/HR_Contract__c/fields/Upload_Button__c.field-meta.xml
<CustomField>
    <fullName>Upload_Button__c</fullName>
    <formula>HYPERLINK(&quot;https://zimmerbiometglobal--c.na104.visual.force.com/apex/MassAttachments_VFPage?id=&quot;&amp;Id, IMAGE(&quot;/img/icon/files16.png&quot;, &quot;Upload file&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Upload Document</label>
    <type>Text</type>
</CustomField>