force-app/main/default/objects/HR_Contract__c/listViews/Contracts.listView-meta.xml
<ListView>
    <fullName>Contracts</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Duration_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_ACTIVITY</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
    <language>en_US</language>
</ListView>